// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Simple 1`] = `
[
  "┏━━━┯━━━┯━━━┳━━━┯━━━┯━━━┳━━━┯━━━┯━━━┓",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┣━━━┿━━━┿━━━╋━━━┿━━━┿━━━╋━━━┿━━━┿━━━┫",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┣━━━┿━━━┿━━━╋━━━┿━━━┿━━━╋━━━┿━━━┿━━━┫",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┗━━━┷━━━┷━━━┻━━━┷━━━┷━━━┻━━━┷━━━┷━━━┛",
]
`;

exports[`Variable Length 1`] = `
[
  "┏━━━┯━━━┯━━━┳━━━┯━━━┯━━━┳━━━┯━━━┯━━━┓",
  "┃   │   │   ┃   │   │   ┃   │   │   ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┣━━━┿━━━┿━━━╋━━━┿━━━┿━━━╋━━━┿━━━┿━━━┫",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┣━━━┿━━━┿━━━╋━━━┿━━━┿━━━╋━━━┿━━━┿━━━┫",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┠───┼───┼───╂───┼───┼───╂───┼───┼───┨",
  "┃ 1 │ 2 │ 3 ┃ 4 │ 5 │ 6 ┃ 7 │ 8 │ 9 ┃",
  "┗━━━┷━━━┷━━━┻━━━┷━━━┷━━━┻━━━┷━━━┷━━━┛",
]
`;
